--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -28,9 +28,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
             </li>
-{#            <li class="nav-item">#}
-{#                <a class="nav-link" href="#">Link</a>#}
-{#            </li>#}
+            {#            <li class="nav-item">#}
+            {#                <a class="nav-link" href="#">Link</a>#}
+            {#            </li>#}
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
@@ -38,19 +38,27 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'all analyses' %}">All analysis</a>
-{#                    <a class="dropdown-item" href="#">Another action</a>#}
-{#                    <div class="dropdown-divider"></div>#}
-{#                    <a class="dropdown-item" href="#">Something else here</a>#}
+                    {#                    <a class="dropdown-item" href="#">Another action</a>#}
+                    {#                    <div class="dropdown-divider"></div>#}
+                    {#                    <a class="dropdown-item" href="#">Something else here</a>#}
                 </div>
             </li>
             <li class="nav-item">
                 <a class="nav-link disabled" href="#">Disabled</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+
+        <br/>
+
+        <form action="{% url 'all searched analyses' %}" class="form-inline my-2 my-lg-0" method="get">
+            <div class="form-group mx-sm-3 mb-2">
+                <label for="" class="sr-only">Search</label>
+                <input type='text' name='search' class="form-control mr-sm-2" placeholder="Search analyses" aria-label="Search">
+            </div>
+            <button type="submit" class="btn btn-outline-success my-2 my-sm-0">Search</button>
         </form>
+        <br/>
+
         {% if user.is_authenticated %}
             <a class="nav-link" href="{% url 'logout user' %}">Logout <span class="sr-only">(current)</span></a>
         {% else %}
@@ -74,35 +82,35 @@
 {#</footer>#}
 {#<!-- Footer -->#}
 <footer class="text-center text-lg-start bg-light text-muted">
-        <!-- Section: Social media -->
-{#        <section#}
-{#                class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">#}
-            <!-- Left -->
+    <!-- Section: Social media -->
+    {#        <section#}
+    {#                class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">#}
+    <!-- Left -->
 
-            <!-- Left -->
+    <!-- Left -->
 
-            <!-- Right -->
-{#            <div>#}
-{#                 <a href="https://www.facebook.com/andrey.kirov.10/">Share</a>#}
-{#                    <i class="fab fa-facebook-f"></i>#}
-{#                <a href="" class="me-4 text-reset">#}
-{#                    <i class="fab fa-twitter"></i>#}
-{#                </a>#}
-{#                <a href="" class="me-4 text-reset">#}
-{#                    <i class="fab fa-google"></i>#}
-{#                </a>#}
-{#                <a href="" class="me-4 text-reset">#}
-{#                    <i class="fab fa-instagram"></i>#}
-{#                </a>#}
-{#                <a href="" class="me-4 text-reset">#}
-{#                    <i class="fab fa-linkedin"></i>#}
-{#                </a>#}
-{#                <a href="" class="me-4 text-reset">#}
-{#                    <i class="fab fa-github"></i>#}
-{#                </a>#}
-{#            </div>#}
-{#            <!-- Right -->#}
-{#        </section>#}
+    <!-- Right -->
+    {#            <div>#}
+    {#                 <a href="https://www.facebook.com/andrey.kirov.10/">Share</a>#}
+    {#                    <i class="fab fa-facebook-f"></i>#}
+    {#                <a href="" class="me-4 text-reset">#}
+    {#                    <i class="fab fa-twitter"></i>#}
+    {#                </a>#}
+    {#                <a href="" class="me-4 text-reset">#}
+    {#                    <i class="fab fa-google"></i>#}
+    {#                </a>#}
+    {#                <a href="" class="me-4 text-reset">#}
+    {#                    <i class="fab fa-instagram"></i>#}
+    {#                </a>#}
+    {#                <a href="" class="me-4 text-reset">#}
+    {#                    <i class="fab fa-linkedin"></i>#}
+    {#                </a>#}
+    {#                <a href="" class="me-4 text-reset">#}
+    {#                    <i class="fab fa-github"></i>#}
+    {#                </a>#}
+    {#            </div>#}
+    {#            <!-- Right -->#}
+    {#        </section>#}
     <!-- Section: Social media -->
 
     <!-- Section: Links  -->
@@ -183,7 +191,7 @@
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
         © Laboratory Managment System Project (author: Andrey Kirov):
-{#        <a class="text-reset fw-bold" href="#">LIMS</a>#}
+        {#        <a class="text-reset fw-bold" href="#">LIMS</a>#}
     </div>
     <!-- Copyright -->
 </footer>
