--- a/templates/laboratory/department_create.html
+++ b/templates/laboratory/department_create.html
@@ -5,7 +5,7 @@
         <div class="col-lg-6">
             <form method="post" action="{% url 'department register' %}">
                 {% csrf_token %}
-                {{ form }}
+                {{ form.as_p }}
 
                 <button class="btn btn-primary mt-2" type="submit">Create Department</button>
             </form>
