--- a/templates/laboratory/department_delete.html
+++ b/templates/laboratory/department_delete.html
@@ -8,7 +8,7 @@
                 {% csrf_token %}
                 {{ form }}
 
-                <button class="btn btn-primary mt-2" type="submit">Delete Department</button>
+                <button class="btn btn-danger mt-2" type="submit">Delete Department</button>
             </form>
         </div>
         <div class="col-lg-3"></div>
