--- a/templates/laboratory/department_nondeleted_list.html
+++ b/templates/laboratory/department_nondeleted_list.html
@@ -2,17 +2,22 @@
 
 {% block page_content %}
     <h1 class="text-center">Departments List</h1>
+    <p>
+        <a href="{% url 'department register' %}" class="btn btn-primary" role="button">Create New Department</a>
+    </p>
     <div class="row">
-        <div class="col-lg-3"></div>
-                {% if all_departments %}
-        <div class="table-responsive-md">
+        {#        <div class="col-lg-3"></div>#}
+        {% if all_departments %}
+            <div class="table-responsive-md">
             <table class="table table-bordered">
                 <tr class="first-table-row">
                     <th scope="col">Name</th>
                     <th scope="col">Description</th>
                     <th scope="col">Telephone Number</th>
-                    <th scope="col">e-mail</th>
-                    <th scope="col">Detail link</th>
+                    <th scope="col">E-mail</th>
+                    {% if user.is_superuser %}
+                        <th scope="col">Edit</th>
+                    {% endif %}
                 </tr>
                 {% for department in all_departments %}
                     <tr>
@@ -20,35 +25,59 @@
                         <td>{{ department.description }}</td>
                         <td>{{ department.telephone_number }}</td>
                         <td>{{ department.email }}</td>
-                        <td><a href="{% url 'edit department' department.pk %}"> {{ department.name }} details</a></td>
+                        {% if user.is_superuser %}
+                            <td><a href="{% url 'edit department' department.pk %}"> Edit Link</a></td>
+                        {% endif %}
                     </tr>
                 {% endfor %}
             </table>
             {% if is_paginated %}
-                <ul class="pagination">
-                    {% if page_obj.has_previous %}
-                        <li><a href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
-                    {% else %}
-                        <li class="disabled"><span>&laquo;</span></li>
-                    {% endif %}
-                    {% for i in paginator.page_range %}
-                        {% if page_obj.number == i %}
-                            <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-center">
+                        {% if page_obj.has_previous %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ page_obj.previous_page_number }}"
+                                   aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            </li>
                         {% else %}
-                            <li><a href="?page={{ i }}">{{ i }}</a></li>
+                            <li class="page-item disabled">
+                                <a class="page-link" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            </li>
                         {% endif %}
-                    {% endfor %}
-                    {% if page_obj.has_next %}
-                        <li><a href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
-                    {% else %}
-                        <li class="disabled"><span>&raquo;</span></li>
-                    {% endif %}
-                </ul>
+                        {% for i in paginator.page_range %}
+                            {% if page_obj.number == i %}
+                                <li class="page-item"><a class="page-link">{{ i }}</a></li>
+                            {% else %}
+                                <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                            {% endif %}
+                        {% endfor %}
+                        {% if page_obj.has_next %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </li>
+                        {% else %}
+                            <li class="page-item disabled">
+                                <a class="page-link" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </li>
                         {% endif %}
-                    {% else %}
-                    No departments to display! If you want to create one clic here:  <a href="{% url 'department register' %}"> Department register </a>
+                    </ul>
+                </nav>
+            {% endif %}
+        {% else %}
+            No departments to display!
         {% endif %}
         </div>
-        <div class="col-lg-3"></div>
     </div>
 {% endblock %}
