--- a/templates/users/patient/patient_edit.html
+++ b/templates/users/patient/patient_edit.html
@@ -1,11 +1,11 @@
 {% extends 'main/base.html' %}
 {% block page_content %}
-    <h1 class="text-center">Edit Analysis Form</h1>
+    <h1 class="text-center">Edit Patient Form</h1>
     <div class="row">
         <div class="col-lg-6">
             <form method="post" action="{% url 'edit patient' profile.pk %}">
                 {% csrf_token %}
-                {{ form }}
+                {{ form.as_p }}
 
                 <button class="btn btn-primary mt-2" type="submit">Edit Patient</button>
             </form>
